# finnhub

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TEST_COVERAGE.md  run_api_tests.sh  swagger.json
api-specs/: base.json  bond.json  calendar.json  corporate-actions.json  crypto.json  economic.json  etf.json  filings.json  forex.json  index.json  institutional.json  misc.json  mutual-fund.json  news.json  scanner.json  split_stats.json  stock.json
benches/: finnhub_benchmarks.rs
examples/: alternative_data.rs  basic_usage.rs  error_handling.rs  forex_trading.rs  rate_limit_window_demo.rs  rate_limiting_demo.rs  rate_limiting_explanation.rs  readme_verification.rs  stock_analysis.rs  technical_analysis.rs  websocket_basic.rs
src/: auth.rs  client.rs  error.rs  lib.rs  rate_limiter.rs
src/endpoints/: bond.rs  calendar.rs  crypto.rs  economic.rs  etf.rs  forex.rs  index.rs  misc.rs  mod.rs  mutual_fund.rs  news.rs  scanner.rs  stock.rs  stock.rs.backup
src/endpoints/stock/: analytics.rs  company.rs  compliance.rs  corporate_actions.rs  estimates.rs  filings.rs  financials.rs  historical.rs  insider.rs  market.rs  mod.rs  ownership.rs  price.rs  sentiment.rs
src/models/: bond.rs  calendar.rs  common.rs  crypto.rs  economic.rs  etf.rs  forex.rs  index.rs  misc.rs  mod.rs  mutual_fund.rs  news.rs  scanner.rs  stock.rs
src/models/stock/: alternative.rs  analytics.rs  common.rs  company.rs  compliance.rs  corporate_actions.rs  estimates.rs  executive.rs  filings.rs  financials.rs  fund.rs  historical.rs  insider.rs  market.rs  mod.rs  ownership.rs  price.rs  sentiment.rs
src/websocket/: mod.rs  stream.rs
tests/: api_integration_test.rs  comprehensive_api_test.rs  essential_endpoints_test.rs  rate_limit_test.rs  rate_limit_verification_test.rs  rate_limit_window_test.rs  rate_limiting_simple_test.rs  rate_limiting_test.rs  stock_quote_test.rs
