[package]
name = "finnhub"
version = "0.2.0"
edition = "2021"
authors = ["Jeffrey Brown"]
description = "A comprehensive Rust client for the Finnhub.io financial data API with 96% endpoint coverage, flexible rate limiting, and WebSocket support"
documentation = "https://docs.rs/finnhub"
homepage = "https://github.com/jbradenbrown/finnhub"
repository = "https://github.com/jbradenbrown/finnhub"
readme = "README.md"
keywords = ["finnhub", "finance", "api", "stocks", "trading"]
categories = ["api-bindings", "finance"]
license = "MIT OR Apache-2.0"
exclude = [
    ".github/",
    ".gitignore",
    ".claude/",
    "CLAUDE.md",
    "TEST_COVERAGE.md",
    "api-specs/",
    "tests/",
    "benches/",
    "run_api_tests.sh"
]

[features]
default = []
websocket = ["tokio-tungstenite"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
futures = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"], optional = true }
tracing = "0.1"
tower = { version = "0.5", features = ["limit", "retry", "timeout"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
proptest = "1.5"
dotenv = "0.15"

[[bench]]
name = "finnhub_benchmarks"
harness = false

[profile.release]
lto = true
opt-level = 3

[lib]
name = "finnhub"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "stock_analysis"
path = "examples/stock_analysis.rs"

[[example]]
name = "forex_trading"
path = "examples/forex_trading.rs"

[[example]]
name = "technical_analysis"
path = "examples/technical_analysis.rs"

[[example]]
name = "alternative_data"
path = "examples/alternative_data.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "rate_limit_window_demo"
path = "examples/rate_limit_window_demo.rs"

[[example]]
name = "rate_limiting_demo"
path = "examples/rate_limiting_demo.rs"

[[example]]
name = "rate_limiting_explanation"
path = "examples/rate_limiting_explanation.rs"

[[example]]
name = "websocket_basic"
path = "examples/websocket_basic.rs"
required-features = ["websocket"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
